# backend/internal/dto/model_activity_item.go
@@ -1,0 +1,33 @@
+/*
+ * Ban Do 5 Tot API
+ *
+ * Backend API for Ban Do 5 Tot project
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package dto
+
+type ActivityItem struct {
+
+	Id string `json:"id,omitempty"`
+
+	Slug string `json:"slug,omitempty"`
+
+	Title string `json:"title,omitempty"`
+
+	ShortDescription string `json:"shortDescription,omitempty"`
+
+	ThumbnailUrl string `json:"thumbnailUrl,omitempty"`
+
+	UnitId *string `json:"unitId,omitempty"`
+
+	UnitName *string `json:"unitName,omitempty"`
+
+	StartDate string `json:"startDate,omitempty"`
+
+	EndDate string `json:"endDate,omitempty"`
+
+	IsActive bool `json:"isActive,omitempty"`
+}
