# backend/internal/dto/model_list_activities_200_response.go
@@ -1,0 +1,19 @@
+/*
+ * Ban Do 5 Tot API
+ *
+ * Backend API for Ban Do 5 Tot project
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package dto
+
+type ListActivities200Response struct {
+
+	Success bool `json:"success,omitempty"`
+
+	Data []ActivityItem `json:"data,omitempty"`
+
+	Meta PaginationMeta `json:"meta,omitempty"`
+}
