# backend/internal/dto/model_list_units_200_response.go
@@ -1,0 +1,17 @@
+/*
+ * Ban Do 5 Tot API
+ *
+ * Backend API for Ban Do 5 Tot project
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package dto
+
+type ListUnits200Response struct {
+
+	Success bool `json:"success,omitempty"`
+
+	Data []UnitItem `json:"data,omitempty"`
+}
