# backend/internal/dto/model_unit_item.go
@@ -1,0 +1,21 @@
+/*
+ * Ban Do 5 Tot API
+ *
+ * Backend API for Ban Do 5 Tot project
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package dto
+
+type UnitItem struct {
+
+	Id string `json:"id,omitempty"`
+
+	Name string `json:"name,omitempty"`
+
+	Code string `json:"code,omitempty"`
+
+	Description string `json:"description,omitempty"`
+}
