# backend/internal/handlers/interfaces/api_activities.gen.go
@@ -1,0 +1,8 @@
+package interfaces
+
+import "github.com/gin-gonic/gin"
+
+type ActivitiesAPIHandler interface {
+	GetActivityDetail(c *gin.Context)
+	ListActivities(c *gin.Context)
+}
