# backend/internal/handlers/interfaces/api_units.gen.go
@@ -1,0 +1,7 @@
+package interfaces
+
+import "github.com/gin-gonic/gin"
+
+type UnitsAPIHandler interface {
+	ListUnits(c *gin.Context)
+}
